; ModuleID = '/home/carl/AnghaBench/vlc/src/media_source/extr_media_tree.c_vlc_media_tree_Remove.c'
source_filename = "/home/carl/AnghaBench/vlc/src/media_source/extr_media_tree.c_vlc_media_tree_Remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@on_children_removed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_media_tree_Remove(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = call i32 @vlc_media_tree_AssertLocked(%struct.TYPE_5__* %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @vlc_media_tree_FindNodeByMedia(i32* %11, i32* %12, i32** %6, i32** %7)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

16:                                               ; preds = %2
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @input_item_node_RemoveNode(i32* %17, i32* %18)
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %21 = load i32, i32* @on_children_removed, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @vlc_media_tree_Notify(%struct.TYPE_5__* %20, i32 %21, i32* %22, i32** %6, i32 1)
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @input_item_node_Delete(i32* %24)
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %16, %15
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @vlc_media_tree_AssertLocked(%struct.TYPE_5__*) #1

declare dso_local i32 @vlc_media_tree_FindNodeByMedia(i32*, i32*, i32**, i32**) #1

declare dso_local i32 @input_item_node_RemoveNode(i32*, i32*) #1

declare dso_local i32 @vlc_media_tree_Notify(%struct.TYPE_5__*, i32, i32*, i32**, i32) #1

declare dso_local i32 @input_item_node_Delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
